[workspace]
members = ["crates/cli-helpers"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
toml = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }

# [workspace.lints.rust]
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "fat"

# This will enable debug symbols in the release build making it increase in size.
# It will not slow down the actual release. Still for running in containers, it
# would be good if we can disable this when pushing to Container registry.
debug = true
